@@ -1,6 +1,7 @@
 0.5.0 ()
 =====
 * Removed old Ogg.Stream backward compatibility functions.
+* Switch to Bytes API.
 
 0.4.5 (08-05-2013)
 =====
